giving more space between menu items on mobile + fixing the footer above a min height of 668

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -15,3 +15,12 @@
   color: var(--primary);
   text-decoration: none;
 }
+
+@media (min-height: 668px) {
+  .container {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+  }
+}
