--- a/src/components/page-links.module.css
+++ b/src/components/page-links.module.css
@@ -16,5 +16,6 @@
 @media (max-width: 1024px) {
   .navigationItem {
     display: block;
+    padding: 5px 0;
   }
 }
